Handle IPv6-only p2p-host by populating correct ENR fields
When only an IPv6 address is provided for --p2p-host, populate
ip6/tcp6/udp6 ENR fields instead of ip/tcp/udp. The ENR field
selection is now based on the actual address type rather than
always assuming IPv4 for the primary address.

Signed-off-by: Usman Saleem <usman@usmans.info>